<resources>
    <string name="app_name">Mint</string>
    <string name="bar_home">Home</string>
    <string name="bar_cal">Calendar</string>
    <string name="bar_entry">New Entry</string>
    <string name="bar_search">Search</string>
    <string name="bar_report">Report</string>
    <string name="radio_title">Title</string>
    <string name="radio_date">Date</string>
    <string name="radio_flagged">Flagged</string>
    <string name="search_bar">Search</string>

    <string-array name="search_options">
        <item>Flagged</item>
        <item>Title</item>
        <item>Date</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="_8942">⋮</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="search_by_button">Search by button</string>
    <string name="name">Name</string>
    <string name="password">Password:</string>
    <string name="user_name">User Name:</string>
    <string name="email">Email:</string>
    <string name="doctor_email">Doctor\'s email</string>
    <string name="update_info">Update Info</string>
    <string name="log_out">Log Out</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign Up</string>


</resources>
