<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_info"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="12dp"
    >


            <android.support.design.widget.TextInputEditText
                android:id="@+id/entry_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/entry_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/entry_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:hint="@string/email"
               />


            <android.support.design.widget.TextInputEditText
                android:id="@+id/blah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:hint="@string/doctor_email"
               />


    <Button
        android:id="@+id/update_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/update_info"/>

    <Button
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@android:color/holo_red_light"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/log_out"
        />

</LinearLayout>

