<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/search_item_border"
    android:layout_margin="5dp">

    
   <android.support.v7.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="4dp"
       android:elevation="4dp">


       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="@dimen/activity_horizontal_margin">

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/title"
               android:text="@string/title"
               android:textAppearance="@style/TextAppearance.AppCompat.Large"
               android:layout_toStartOf="@+id/options"/>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/date"
               android:text="@string/date"
               android:textAppearance="@style/TextAppearance.AppCompat.Large"
               android:layout_below="@+id/title"/>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/description"
               android:text="@string/description"
               android:textAppearance="@style/TextAppearance.AppCompat.Large"
               android:layout_below="@+id/date"
               android:ellipsize="end"
               />


           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/_8942"
               android:id="@+id/options"
               android:textAppearance="@style/TextAppearance.AppCompat.Large"
               android:textSize="25sp"
               android:layout_alignParentEnd="true"
               android:paddingStart="@dimen/activity_horizontal_margin"
               android:paddingEnd="@dimen/activity_horizontal_margin"/>


       </RelativeLayout>



   </android.support.v7.widget.CardView>






</LinearLayout>